# tipe

./: .gitignore  CMakeLists.txt
cmake/: FindGLEW.cmake  FindHASARD.cmake  FindSDL.cmake  FindSDL_gfx.cmake  mingw32.cmake
doc/: color_interpolation.xcf  normal.tga  normal2.tga  presentation.nv  strange.tga  strange2.tga  synoptique.nv
src/: CMakeLists.txt  app.cpp  app.h  cam.cpp  cam.h  camera_app.cpp  camera_app.h  capp.cpp  capp.h  circle.cpp  circle.h  color.cpp  color.h  color_app.cpp  color_app.h  conf.cpp  conf.h  config.h.cmake  const.h  cube.cpp  cube.h  facet.cpp  facet.h  facet_app.cpp  facet_app.h  gapp.cpp  gapp.h  grid.cpp  grid.h  grid_app.cpp  grid_app.h  iapp.cpp  iapp.h  input.cpp  input.h  learning_cam.cpp  learning_cam.h  light.cpp  light.h  line.cpp  (+47 more)
utils/: array.py
