cmake_minimum_required(VERSION 2.6)
PROJECT(Astrée)
SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_gfx REQUIRED)
CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/src/config.h.cmake ${PROJECT_SOURCE_DIR}/src/config.h)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)
ADD_SUBDIRECTORY(src)
