SET(EXECUTABLE tipe)

FILE(GLOB_RECURSE TIPE_SRCS *.cpp *.c)
SET(TIPE_SRCS ${TIPE_SRCS} PARENT_SCOPE)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${SDL_INCLUDE_DIR} ${SDLGFX_INCLUDE_DIR} )

ADD_EXECUTABLE(${EXECUTABLE} ${TIPE_SRCS})
SET_TARGET_PROPERTIES(${EXECUTABLE} PROPERTIES LINK_FLAGS "${TIPE_LDFLAGS}" COMPILE_FLAGS "${TIPE_CFLAGS}")

TARGET_LINK_LIBRARIES( ${EXECUTABLE} ${SDLGFX_LIBRARY} ${SDL_LIBRARY})

